--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<b>Info Nights: Coming soon!</b><br>
 						Come learn more about joining Star Course!<br><br>
 					</p>
-					<img height="50%" width="50%" src="img/infonight/infonightflyer2018.jpg"/>
+					<img height="50%" width="50%" src="img/CALLING ALL CONCERT LOVERS.png.JPEG"/>
 					<hr style="border-top: dotted 1px;" /><br>
 					-->
 
