--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
 <!-- HEAD SECTION containes metadata and links -->
-<head>
+<head
 	<!-- compatability -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -266,7 +266,7 @@
 						<h4 class="text-center"> 2024 - 2025 Season </h4>
 						<img src="img/posters/Laundry Day Poster copy.jpg" title="Laundry Day" style="margin-top: 5px;" height="250">
 						<img src="img/posters/Slow Pulp Black.jpg" title="Slow Pulp" style="margin-top: 5px;" height="250">
-						<img src="img/posters//almost monday.png" title="almost monday" style="margin-top: 5px;" height="250">
+						<img src="img/almost monday.png title="almost monday" style="margin-top: 5px;" height="250">
 	
 						<!-- <p><br></p> -->
 					</div>
