--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 						<h4 class="text-center"> 2024 - 2025 Season </h4>
 						<img src="img/posters/Laundry Day Poster copy.jpg" title="Laundry Day" style="margin-top: 5px;" height="250">
 						<img src="img/posters/Slow Pulp Black.jpg" title="Slow Pulp" style="margin-top: 5px;" height="250">
-						<img src="img/almost monday.png title="almost monday" style="margin-top: 5px;" height="250">
+						<img src="img/almost monday.png" title="almost monday" style="margin-top: 5px;" height="250">
 	
 						<!-- <p><br></p> -->
 					</div>
