--- a/index.html
+++ b/index.html
@@ -183,30 +183,27 @@
 					<!--<img height="40%" width="40%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
 					<!--<p>
 						<br>Star Course presents<br>
-						<b>redveil</b><br><br>
+						<b>SOFIA ISELLA</b><br><br>
 						<!-- <br>
 						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">To Be Announced</a></i><br>
 						<br> -->
-						<!--<b>Saturday October 7th, 2023</b><br>
+						<!--<b>Wednesday, October 15th, 2025</b><br>
 						Doors 7pm | Show 7:30pm<br>
-						Students $20 | Public $30<br>
+						Students $17 | Public $22<br>
 						<br>
-						<b>Foellinger Auditorium</b><br>
+						<b>City Center</b><br>
 						709 S Mathews Ave<br>
 						Urbana, IL 61801<br>
 						<br>
 						Additional online service fees apply.<br>
-						Foellinger Auditorium is reserved seating only.<br>
-						No backpacks, food, or drink allowed.<br>
-						Foellinger Auditorium is a non-smoking venue.<br><br>
-						<a href="http://StateFarmCenter.com/Redveil"
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fstudents"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="http://StateFarmCenter.com/Redveil"
+						<a href="https://fightingillini.evenue.net/event/E24/0506"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E24/0506V"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
 					 	<!-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
-						 <!-- <a href="opener contest google form link here"
-                             			class="btnghost" target="_blank"></i> Opener Contest Submissions</a><br>
 					</p> -->
 					
 					
@@ -221,8 +218,8 @@
 						Students $18 | Public $25<br>
 						<br>
 						<b>Foellinger Auditorium</b><br>
-						709 S Mathews Ave<br>
-						Urbana, IL 61801<br>
+						505 S Chestnut Street<br>
+						Champaign, IL 61820<br>
 						<br>
 						Additional online service fees apply.<br>
 						Foellinger Auditorium is reserved seating only.<br>
