--- a/index.html
+++ b/index.html
@@ -180,14 +180,12 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<!--<img height="40%" width="40%" src="img/posters/REDVEIL Star Course Poster_REDVEIL POSTER no qr.jpg"/>
-					<!--<p>
+					<img height="40%" width="40%" src="img/posters/sofiaisella.png"/>
+					<p>
 						<br>Star Course presents<br>
 						<b>SOFIA ISELLA</b><br><br>
-						<!-- <br>
-						with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">To Be Announced</a></i><br>
-						<br> -->
-						<!--<b>Wednesday, October 15th, 2025</b><br>
+						<br>
+						<b>Wednesday, October 15th, 2025</b><br>
 						Doors 7pm | Show 7:30pm<br>
 						Students $17 | Public $22<br>
 						<br>
@@ -196,15 +194,13 @@
 						Urbana, IL 61801<br>
 						<br>
 						Additional online service fees apply.<br>
-						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fstudents"
+						<a href="https://fightingillini.evenue.net/events/SI"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E24/0506"
+						<a href="https://fightingillini.evenue.net/event/E25/1015"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E24/0506V"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
-					 	<!-- <a href="facebook event link here"
-							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
-					</p> -->
+						<a href="https://fightingillini.evenue.net/event/E25/1015V"
+							class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
+					</p>
 					
 					
 					<!-- TODO Paste Poster Image Link for Upcoming Show here: -->
