--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/sofiaisella.png"/>
+					<img height="40%" width="40%" src="img/sofiaisella.png"/>
 					<p>
 						<br>Star Course presents<br>
 						<b>SOFIA ISELLA</b><br><br>
