--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 						Students $17 | Public $22<br>
 						<br>
 						<b>City Center</b><br>
-						709 S Mathews Ave<br>
-						Urbana, IL 61801<br>
+						505 S. Chestnut Street<br>
+						Champaign, IL 61820<br>
 						<br>
 						Additional online service fees apply.<br>
 						<a href="https://fightingillini.evenue.net/events/SI"
