--- a/index.html
+++ b/index.html
@@ -182,23 +182,18 @@
 					<!-- TODO: Show announcements and tickets (template) -->
 					<img height="40%" width="40%" src="img/sofiaisella.png"/>
 					<p>
-						<br>Star Course presents<br>
-						<b>SOFIA ISELLA</b><br><br>
-						<b>Wednesday, October 15th, 2025</b><br>
-						Doors 7pm | Show 7:30pm<br>
-						Students $17 | Public $22<br>
+						<br>Star Course and Live Nation presents<br>
+						<b>BIG TIME RUSH</b><br><br>
+						<b>Saturday, January 24th, 2026</b><br>
+						Doors 5:30pm | Show 7:00<br>
 						<br>
-						<b>City Center</b><br>
-						505 S. Chestnut Street<br>
+						<b>State Farm Center</b><br>
+						1800 South 1st Street<br>
 						Champaign, IL 61820<br>
 						<br>
 						Additional online service fees apply.<br>
-						<a href="https://fightingillini.evenue.net/events/SI"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E25/1015"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E25/1015V"
-							class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
+						<a href="https://www.statefarmcenter.com/events/detail/btr"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Tickets</a><br>
 					</p>
 					
 					
