--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/sofiaisella.png"/>
+					<img height="40%" width="40%" src="img/BIG_TIME_RUSH"/>
 					<p>
 						<br>Star Course and Live Nation presents<br>
 						<b>BIG TIME RUSH</b><br><br>
