--- a/index.html
+++ b/index.html
@@ -180,9 +180,7 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img
-/BIG_TIME_RUSH
-"/>
+					<img height="40%" width="40%" src="img/posters/BIG_TIME_RUSH"/>
 					<p>
 						<br>Star Course and Live Nation presents<br>
 						<b>BIG TIME RUSH</b><br><br>
