--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 
 					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/Static_Print_11x17_BigTimeRush_2026_Regional_StateFarmCenter_0124.pdf"/>
+					<img height="40%" width="40%" src="img/posters/Static_Print_11x17_BigTimeRush_2026_Regional_StateFarmCenter_0124.pdf"/> -->
 					<p>
 						<br>Star Course and Live Nation presents<br>
 						<b>BIG TIME RUSH</b><br><br>
