--- a/index.html
+++ b/index.html
@@ -166,34 +166,18 @@
 					<p>
 						If you missed us at Quad Day but are still interested in joining,<br>
 						please contact us with any questions at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br><br>
-						<b>Info Nights: Tues. August 28th and Thurs. August 30th</b><br>
-						at 6:30pm in Gregory Hall Room 311.<br>
+						<b>Info Nights: Tues. January 27th</b><br>
+						at 7:00pm in Lincoln Hall Room 1090<br>
 						Come learn more about joining Star Course!<br><br>
 						If you can't make the info nights, come to our first<br>
-						<b>All Staff Meeting on Tues. September 4th</b><br>
-						at 6pm in Foellinger Auditorium.
+						<b>All Staff Meeting on Tues. January 27th</b><br>
+						at 7pm in Lincoln Hall 1090.
 					</p>
 					<img height="50%" width="50%" src="img/infonight/infonightflyer2018.jpg"/>
 					<hr style="border-top: dotted 1px;" /><br>
 					-->
 
 
-
-					<!-- TODO: Show announcements and tickets (template) -->
-					<img height="40%" width="40%" src="img/posters/Static_Print_11x17_BigTimeRush_2026_Regional_StateFarmCenter_0124-1.png"/> -->
-					<p>
-						<br>Star Course and Live Nation presents<br>
-						<b>BIG TIME RUSH</b><br><br>
-						<b>Saturday, January 24th, 2026</b><br>
-						Doors 5:30pm | Show 7:00<br>
-						<br>
-						<b>State Farm Center</b><br>
-						1800 South 1st Street<br>
-						Champaign, IL 61820<br>
-						<br>
-						Additional online service fees apply.<br>
-						<a href="https://www.statefarmcenter.com/events/detail/btr"
-							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Tickets</a><br>
 					</p>
 					
 					
