--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 				<!--
 				<h3>Star Course Presents</h3>
 						<br>
-						<b style="font-size: 1.5em;">almost monday</b><br>
+						<b style="font-size: 1.5em;">The Two Lips</b><br>
 						<br>
 						<img height="40%" width="40%"src="img/almost monday.png"/>
 				
-						<Tuesday May 6th, 2025</b><br>
+						<Tuesday March 10th, 2026</b><br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
-						Early Access Additional $5 | Students $14 | Public $24<br>
+						Early Access Additional $5 | Students $10 | Public $18<br>
 						<br>
 						<b>City Center</b><br>
 						505 S Chestnut Street<br>
