--- a/index.html
+++ b/index.html
@@ -125,16 +125,18 @@
 						<br>
 						<b style="font-size: 1.5em;">The Two Lips</b><br>
 						<br>
-						<img height="40%" width="40%"src="img/the_two_lips_pink"/>
+						<img height="40%" width="40%"src="img/posters/thetwolips.png"/>
 				
-						<Tuesday March 10th, 2026</b><br>
+						<Tuesday March 10th, 2026<br>
 						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
 						Early Access Additional $5 | Students $10 | Public $18<br>
 						<br>
-						<b>City Center</b><br>
+							
+						<b style="font-size: 1.5em;">City Center</b><br>
 						505 S Chestnut Street<br>
 						Champaign, IL 61801<br>
 						<br>
+						<!--
 						Additional online service fees apply.<br>
 						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fstudents"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
@@ -142,8 +144,9 @@
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 						<a href="https://fightingillini.evenue.net/event/E24/0506V"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
-					 	<!-- <a href="facebook event link here"
+					 	<-- <a href="facebook event link here"
 							 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+							-->
 		
 					</p>
 					<!-- TODO: End of fall Semester -->
