--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						Early Access Additional $5 | Students $10 | Public $18<br>
 						<br>
 							
-						<b style="font-size: 1.5em;">City Center</b><br>
+						<b>City Center</b><br>
 						505 S Chestnut Street<br>
 						Champaign, IL 61801<br>
 						<br>
