--- a/index.html
+++ b/index.html
@@ -120,9 +120,27 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-				
-				<!-- <h3>Star Course Presents</h3> <br> <b style="font-size: 1.5em;">The Two Lips</b><br> <br> <img height="40%" width="40%"src="img/the_two_lips_pink"/> <Tuesday March 10th, 2026</b><br> Early Access 6:30 | Doors 7pm | Show 7:30pm<br> Early Access Additional $5 | Students $10 | Public $18<br> <br> <b>City Center</b><br> 505 S Chestnut Street<br> Champaign, IL 61801<br> <br> Additional online service fees apply.<br> <a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=%2Fstudents" class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br> <a href="https://fightingillini.evenue.net/event/E24/0506" class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br> <a href="https://fightingillini.evenue.net/event/E24/0506V" class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br> <!-- <a href="facebook event link here" class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+<img height="40%" width="40%" src="img/posters/thetwolips.png"/>
+					<p>
+						<br>Star Course Presents<br>
+						<b>The Two Lips</b><br><br>
+						<b>Tuesday, March 10th, 2026</b><br>
+						Early Access 6:30 | Doors 7pm | Show 7:30pm<br>
+						Students $10 | Public $18<br>
+						<br>
+						<b>City Center </b><br>
+						505 S. Chestnut Street<br>
+						Champaign, IL 61820<br>
+						<br>
+						Additional online service fees apply.<br>
+						<a href="https://fightingillini.evenue.net/events/SI"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E25/1015"
+							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+						<a href="https://fightingillini.evenue.net/event/E25/1015V"
+							class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
 					</p>
+									</p>
 					<!-- TODO: End of fall Semester -->
 						<br>
 					<!-- TODO: Start of Fall/Spring semester -->
