--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="row">
 				
 					<!-- TODO: Show announcements and tickets (template) -->
-<img height="40%" width="40%" src="img/posters/thetwolips.png"/>
+<img height="40%" width="40%" src="/img/poster PINK 11x17.png"/>
 					<p>
 						<br>Star Course Presents<br>
 						<b>The Two Lips</b><br><br>
