--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 						Champaign, IL 61820<br>
 						<br>
 						Additional online service fees apply.<br>
-						<a href="https://fightingillini.evenue.net/events/SI"
+						<a href="https://fightingillini.evenue.net/signin?uf=ST&ui=SHO&continue=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&_gl=1*fm3xsx*_ga*MTU5MDk4OTg2OC4xNjgzNjUwOTc2*_ga_EYNF8E1S9H*MTczODM0MjA4MC4yOS4xLjE3MzgzNDIwODQuMC4wLjA."
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E25/1015"
+						<a href="https://fightingillini.evenue.net/events/TTL"
 							 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-						<a href="https://fightingillini.evenue.net/event/E25/1015V"
+						<a href="https://fightingillini.evenue.net/events/TTL"
 							class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Early Access Add-On</a><br>
 					</p>
 									</p>
